src/golden/objects/typeerrors/test.golden/nosuchctor.fl
	contract Down
		init
		later

	object InitContract
		ctor init
		
	agent BadCallContract
		state
			InitContract obj
			String x
			
		implements Down
			init
				obj <- InitContract.start
			later
				x <- obj.notThere
		